Fixed Cards Padding Issues On Mobile Devices

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -20,6 +20,6 @@
 
 @media only screen and (max-width: 770px) {
     .card {
-      margin: 4% 0 !important;
+      margin: 2% 0 !important;
     }
   }
